src/client/components/Navigation/LanguageSettings.less
@import (reference) '../../styles/modules/variables.less';
@import (reference) '../../styles/custom.less';

.LanguageSettings {
  .ant-popover-inner-content {
    overflow: auto;
  }

  &__option {
    height: 22px;
    overflow: auto;

    &-selected {
      color: @primary-color;
    }
  }

  .Loading {
    display: inline-block;

    &__icon:before {
      font-size: 15px !important;
      vertical-align: middle;
    }
  }
}

